--- a/app/pages/addToWallet.html
+++ b/app/pages/addToWallet.html
@@ -15,6 +15,11 @@
             <input style="display:none;" type="file" id="imageWallet" />
           </ul>
       </li>
+	       <li style="text-align:left;">
+          <ul>
+            <a onclick="createSMS();"><span style="color: #14a6c5;">My SMS page</span></a>
+          </ul>
+      </li>
       </div>
 </div>
     <div  style="display:none" id="loading_Cat" >
