--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -33,6 +33,10 @@
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
 		<a onclick="createWallet();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My Receipts Wallet</span></a></div>
+		<div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
+		<a onclick="createEWallet();"><p class="createewalletlogo" ></p><span style="color: #14a6c5;padding-top: 5%;text-align: -webkit-center;">e-Wallet</span></a></div><br>
+		<div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
+		<a onclick="createEWallet();"><p class="createcreditcardlogo" ></p><span style="color: #14a6c5;padding-top: 5%;text-align: -webkit-center;">Credit Card</span></a></div>
 	</div>	
 	<div>
 	  <div style="display:none" id="loading_Cat" >
