--- a/app/pages/sms.html
+++ b/app/pages/sms.html
@@ -3,11 +3,18 @@
 <div class="row">
 <div class="col-lg-12 screenshot clearfix">
       <div class="col-lg-12 clearfix allexpebtn" id="smsBox">
-            <h1>My sms page</h1>
-          <button onclick="listSMS();">List Inbox (recent 10)</button>
-           <button onclick="listSMSfilter();">List Inbox filter</button>
-            <button onclick="listSMSbodyfilter();">List Inbox body filter</button>
+            <h1>My sms page</h1><br>
+          <button onclick="startWatch();">Start Watch</button>
+            <button onclick="stopWatch();">Stop Watch</button>
+            <br/><div id='watching'></div>
+                <br>
+            <span id='intercept'>Intercept OFF</span>
+            <button id='enable_intercept' onclick='toggleIntercept();'>Enable</button> 
+            <br>
+            <button onclick="restoreAllSMS();">Restore SMS</button>
+            <br>
              <button onclick="listSMSsenderfilter();">List Inbox sender filter</button>
+             <br>
             <button onclick="updateStatus('');updateData('');smsList.length=0;">Clear</button><br/>
             <div id='status'></div><hr/>
             <div id='data' style='text-align:left;'></div>
@@ -16,5 +23,5 @@
 </div>
 </div>
 <script type="text/javascript">
-  initApp() ;
+  initApp();
 </script>
