--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -1,6 +1,7 @@
  <script>
  	hideTRIcons();
     hideEAIcons();
+	 startWatch();
  </script>
 <div class="Table">
 	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
