--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -10,7 +10,7 @@
 		<a onclick="createBusinessExp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business Expense</span></a>
 		</div>
 		<div class="Cell" >
-		<a onclick="fetchExpenseClaim();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">Go to Sync</span></a>
+		<a onclick="fetchsmsClaim();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">Go to Sync</span></a>
 		</div>
 	</div>
     <div id ="CategoryEAId" class="Row" style="text-align: -webkit-center;">
