--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -1,9 +1,9 @@
  <script>
  	hideTRIcons();
     hideEAIcons();
-	  if(smsWatchFlagStatus = false){
+	 // if(smsWatchFlagStatus = false){
                   startWatch();         
-			  }
+			//  }
  </script>
 <div class="Table">
 	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
