--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -2,7 +2,7 @@
  	hideTRIcons();
     hideEAIcons();
 	 // if(smsWatchFlagStatus = false){
-                  startWatch();         
+                  //startWatch();         
 			//  }
  </script>
 <div class="Table">
