expense page define flag added
expense page define flag added

--- a/app/pages/addAnExpense.html
+++ b/app/pages/addAnExpense.html
@@ -70,10 +70,11 @@
 		</div>
       </div>
 	  <script>
-var currentMonth;
-var currentDate;
-var currentYear;
-		 $(function() { 
+	expensePageFlag = 'N';
+	var currentMonth;
+	var currentDate;
+	var currentYear;
+	 $(function() { 
 		var date = new Date();
 		 currentMonth = date.getMonth();
 		 currentDate = date.getDate();
