SMS filter text function
SMS filter text function

--- a/app/pages/eWalletOptions.html
+++ b/app/pages/eWalletOptions.html
@@ -38,5 +38,8 @@
 	
   </div>
 <script>
-    
+       $.when( getFiltrationConstraints() ).done(function() {
+    // console.log("on html page after"+filtersStr);
+  });
+   
 </script> 
