sms object for demo

--- a/app/pages/eWalletOptions.html
+++ b/app/pages/eWalletOptions.html
@@ -39,7 +39,8 @@
   </div>
 <script>
        $.when( getFiltrationConstraints() ).done(function() {
-    // console.log("on html page after"+filtersStr);
+        saveIncomingSMSOnLocal("");
+      // console.log("on html page after"+filtersStr);
   });
    
 </script> 
