--- a/app/pages/smsToExpense.html
+++ b/app/pages/smsToExpense.html
@@ -72,7 +72,7 @@
 </div>
 </div>
 <script>
-	alert(smsToExpenseStr)
+	//alert(smsToExpenseStr)
 	expensePageFlag =  'S';
 	var smsSplitStr = smsToExpenseStr.split("_");
 	var currentMonth;
