--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -37,9 +37,9 @@
 	</div>
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
-		<a onclick="createWallet();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My Receipts Wallet</span></a></div>
+		<a onclick="createWallet();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">Paper Receipt</span></a></div>
 		<div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
-		<a onclick="viewMessages();"><p class="createewalletlogo" ></p><span style="color: #14a6c5;padding-top: 5%;text-align: -webkit-center;">Smart Expeneses</span></a></div><br>
+		<a onclick="viewMessages();"><p class="createewalletlogo" ></p><span style="color: #14a6c5;padding-top: 5%;text-align: -webkit-center;">SmartClaims </span></a></div><br>
 		
 	<div>
 	  <div style="display:none" id="loading_Cat" >
