--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -11,6 +11,7 @@
        // console.log("on html page after"+ window.localStorage.getItem("SMSFilterationStr"));
 		}
 	}
+	 alert(smsList.length)
  </script>
 <div class="Table">
 	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
