--- a/app/pages/smsToExpense.html
+++ b/app/pages/smsToExpense.html
@@ -102,7 +102,7 @@
 	j("#expenseName").change(function() {
 		getPerUnitBasedOnExpense();
 	});
-	onloadExpense();
+	
 	function validate() {
 		var field = document.getElementById("expAmt");
 		if (field.value.length > 8) {
@@ -113,6 +113,7 @@
 		}
 	}
 	j(document).ready(function() {	
+        onloadExpense();
 		setTimeout(function(){
 			var amt =Math.round(smsSplitStr[3]); ;
 			document.getElementById("expDate").value = getExpenseDateFromSMS(smsSplitStr[2]);
@@ -120,6 +121,8 @@
 			document.getElementById("expAmt").value = amt;
 			document.getElementById("smsID").value = smsSplitStr[0];
 			document.getElementById("expUnit").value = '1';
-		 }, 250);
+            j("#accountHead").select2("val", '1');
+            j("#expenseName").select2("val", '1');
+		 }, 500);
 	});
 </script>
