--- a/app/pages/smsToExpense.html
+++ b/app/pages/smsToExpense.html
@@ -88,6 +88,7 @@
 		});
 	});
     onloadExpense();
+    loadAllSMS();
 	currentMonth = currentMonth + 1;
 	if (currentDate < 10) {
 		currentDate = '0' + currentDate
