--- a/app/pages/smsToExpense.html
+++ b/app/pages/smsToExpense.html
@@ -122,6 +122,7 @@
 			document.getElementById("expAmt").value = amt;
 			document.getElementById("smsID").value = smsSplitStr[0];
 			document.getElementById("expUnit").value = '1';
+            discardMessages(smsSplitStr[0]);
 		 }, 250);
 	});
 </script>
